# discrete-logic-simulator

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
render/: Cargo.toml
render/src/: lib.rs  main.rs  shader.wgsl
src/: blueprint.rs  lib.rs  logic.rs  main.rs  raw_list.rs  render.rs  shader.wgsl
src/blueprint/: explore.rs  parse.rs  trace.rs
src/logic/: batch_sim.rs  bitmanip.rs  bitpack_sim.rs  gate_status.rs  network.rs  reference_sim.rs
test_files/: all_traces.blueprint  bcd_count.blueprint  bcd_decoder_display.blueprint  big_decoder.blueprint  circle.blueprint  gate_array.vcb  gates.blueprint  intro.blueprint  intro_new_format.blueprint  invalid_base64.blueprint  invalid_zstd.blueprint  latch_test.blueprint  serial_multipliers.vcb  small_decoder.blueprint  testworld.vcb  vmem_test.vcb  xnor_edge_case.blueprint
