#[target.x86_64-unknown-linux-gnu]
#rustflags = [
#    #"-C", "link-arg=-fuse-ld=lld",
#    "-C", "link-arg=-fuse-ld=mold",
#]

[package]
name = "logic_simulator"
version = "0.1.0"
edition = "2021"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# Optimize deps in debug
[profile.dev.package."*"]
opt-level = 3           # Build in release
strip = true            # Remove everything unnessesary from binary
debug-assertions = true # 
#lto = "thin"

[profile.release]

# Very expensive, but makes 
# code a tiny bit faster
# Makes SIMD significantly faster
lto = true
codegen-units = 1
#panic = "abort"

#opt-level = "s"
#opt-level = 3
#rustflags = "-C llvm-args=\"-unroll-threshold=1000\""
#rustflags = "-C target-cpu=native"
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.small]
inherits = "release"
opt-level = "z"   
#rustflags = "-C prefer-dynamic" <- IDK how to do this
strip = true   
debug = false

debug-assertions = false
overflow-checks = false
lto = false # conflicts with dynamic linking
#panic = 'abort' conflicts with dynamic linking
incremental = false
codegen-units = 16
rpath = false



[rust]
#rustflags = ["-C", "target-cpu=native"]
#debuginfo-level = 2
#opt-level = 0

#[lib]
#test = true
#path = "src/lib.rs"

[dependencies]
base64 = {version = "0.13.0"}
zstd = {version = "0.11", default-features = false}
#colored = {version = "2.0.0", default-features = false}
#rayon = "*"
#bitvec = "1"
itertools = "0.10.5"
bytemuck = "1.12.1"
clap = { version = "4.0.19", features = ["derive"] }
crossterm = "0.25.0"
anyhow = { version = "1.0.66", features = ["backtrace"] }
serde_json = "1.0.87"
image = "0.24.5"
arboard = "3.2.0"
#rand = "0.8.5"


[dev-dependencies]
criterion = {version = "0.4", default-features = false}
#pretty_assertions = "1.3.0"


[[bench]]
name = "benchmark"
harness = false
