cargo-features = ["profile-rustflags"]

#[target.x86_64-unknown-linux-gnu]
#rustflags = [
#    #"-C", "link-arg=-fuse-ld=lld",
#    "-C", "link-arg=-fuse-ld=mold",
#]

[package]
name = "logic_simulator"
version = "0.1.0"
edition = "2021"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# Optimize deps in debug
[profile.dev.package."*"]
opt-level = 3           # Build in release
#strip = true            # Remove everything unnessesary from binary
debug-assertions = true # 
#lto = "thin"

[profile.release]
# link-arg: extra linker arguments
# passes: extra llvm passes
# "remark all"
rustflags = [
    "-C", "target-cpu=native",
]
opt-level = 3 
# Very expensive, but makes 
# code a tiny bit faster
# Makes SIMD significantly faster
# lto = true
# codegen-units = 1
#panic = "abort"

#opt-level = "s"
#opt-level = 3
#rustflags = "-C llvm-args=\"-unroll-threshold=1000\""
#rustflags = "-C target-cpu=native"
debug = true

[profile.release-dev]
inherits = "release"
overflow-checks = true

[profile.release-lto]
inherits = "release"
lto = "fat"

[profile.release-lto-extreme]
inherits = "release-lto"
codegen-units = 1
panic = "abort"

[profile.release-extreme]
inherits = "release"
panic = "abort"
debug = false

[profile.small]
inherits = "release"
opt-level = "z"   
#rustflags = "-C prefer-dynamic" <- IDK how to do this
strip = true   
debug = false

debug-assertions = false
overflow-checks = false
lto = true # conflicts with dynamic linking
#panic = 'abort' conflicts with dynamic linking
incremental = false
codegen-units = 16
rpath = false



#[rust]
#rustflags = ["-C", "target-cpu=native"]
#debuginfo-level = 2
#opt-level = 0

#[lib]
#test = true
#path = "src/lib.rs"

[dependencies]
base64 =    { version = "0.13.0", default-features = false, features = ["std"]              }
#base64 =    { version = "0.21.0", default-features = false, features = ["std"]              }
#zstd =      { version = "0.11",   default-features = false                                  }
zstd =      { version = "0.12.3",   default-features = false                                }
itertools = { version = "0.10.5", default-features = false, features = ["use_std"]          }
bytemuck =  { version = "1.12.1", default-features = false                                  }
clap =      { version = "4.0.19",                           features = ["derive"]           }
#crossterm = { version = "0.25.0", default-features = false                                  }
crossterm = { version = "0.26.0", default-features = false                                  }
anyhow =    { version = "1.0.66", default-features = false, features = ["std", "backtrace"] }
image =     { version = "0.24.5", default-features = false, features = ["gif"]              }
arboard =   { version = "3.2.0",  default-features = false, features = ["image-data"]       }
tempfile =  { version = "3.3.0",  default-features = false                                  }
#arrayvec =  { version = "0.7.2",  default-features = false                                  }
json =      { version = "0.12.4", default-features = false                                  }
#rand = "0.8.5"
nohash-hasher = "0.2.0"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
strum_macros = "0.24.3"


[dev-dependencies]
criterion = {version = "0.4", default-features = false}
#pretty_assertions = "1.3.0"


[[bench]]
name = "benchmark"
harness = false
