cargo-features = ["profile-rustflags"]

#[workspace]
#members = ["render"]


#[target.x86_64-unknown-linux-gnu]
#rustflags = [
#    #"-C", "link-arg=-fuse-ld=lld",
#    "-C", "link-arg=-fuse-ld=mold",
#]

[package]
name = "logic_simulator"
version = "0.1.0"
edition = "2021"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# Optimize deps in debug
[profile.dev.package."*"]
opt-level = 3           # Build in release
#strip = true            # Remove everything unnessesary from binary
debug-assertions = true # 
#lto = "thin"

[profile.release]
# link-arg: extra linker arguments
# passes: extra llvm passes
# "remark all"
rustflags = [
    "-C", "target-cpu=native",
]
opt-level = 3 
# Very expensive, but makes 
# code a tiny bit faster
# Makes SIMD significantly faster
# lto = true
# codegen-units = 1
#panic = "abort"

#opt-level = "s"
#opt-level = 3
#rustflags = "-C llvm-args=\"-unroll-threshold=1000\""
#rustflags = "-C target-cpu=native"
debug = true

[profile.release-dev]
inherits = "release"
overflow-checks = true

[profile.release-lto]
inherits = "release"
lto = "fat"

[profile.release-lto-extreme]
inherits = "release-lto"
#codegen-units = 1 <- makes no diffrence when everything is inlined
panic = "abort"
debug = false
rustflags = [
    "-C", "target-cpu=native",
    "-C", "code-model=small",
]

[profile.release-extreme]
inherits = "release"
panic = "abort"
debug = false

[profile.small]
inherits = "release"
opt-level = "z"   
#rustflags = "-C prefer-dynamic" <- IDK how to do this
strip = true   
debug = false

debug-assertions = false
overflow-checks = false
lto = true # conflicts with dynamic linking
#panic = 'abort' conflicts with dynamic linking
incremental = false
codegen-units = 16
rpath = false



#[rust]
#rustflags = ["-C", "target-cpu=native"]
#debuginfo-level = 2
#opt-level = 0

#[lib]
#test = true
#path = "src/lib.rs"

[dependencies]
base64        = { version="0.21.2", features=["std"],                         default-features=false }
zstd          = { version="0.12.3",                                           default-features=false }
itertools     = { version="0.10.5", features=["use_std"],                     default-features=false }
bytemuck      = { version="1.12.1",                                           default-features=false }
clap          = { version="4.3.2",  features=["derive"]                                              }
anyhow        = { version="1.0.71", features=["std","backtrace"],             default-features=false }
json          = { version="0.12.4",                                           default-features=false }
nohash-hasher = { version="0.2.0",  features=["std"],                         default-features=false }
#strum         = { version="0.24.1", features=["std","derive","strum_macros"], default-features=false }
either        = { version="1.8.1",                                            default-features=false }
ahash         = { version="0.8.3",  features=["std"],                         default-features=false }
bumpalo       = { version="3.12.0", features = ["allocator_api"],             default-features=false }
#rustc-hash = { version="1.1.0", features=["std"] }
#rendezvous_swap = "*"

# print_sim
crossterm     = { version="0.26.1",                                           default-features=false, optional=true }

# clip
arboard       = { version="3.2.0",  features=["image-data"],                  default-features=false, optional=true }

# gif
image         = { version="0.24.6", features=["gif"],                         default-features=false, optional=true }
tempfile      = { version="3.6.0",                                            default-features=false, optional=true }

# render
wgpu          = { version="0.15.1", features=["wgsl"],                        default-features=false, optional=true }
winit         = { version="0.28.3",                                                                   optional=true }
pollster      = { version="0.3.0",                                            default-features=false, optional=true }
env_logger    = { version="0.10.0",                                           default-features=false, optional=true }
log           = { version="0.4.17",                                           default-features=false, optional=true }

[features]
#default = ["all"]
print_sim = ["dep:crossterm"]
clip = ["dep:arboard"]
gif = ["dep:image", "dep:tempfile"]
render = ["dep:winit", "dep:wgpu", "dep:env_logger", "dep:pollster", "dep:log"]

all = ["print_sim", "clip", "gif", "render"]

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
paste = { version = "1.0.12" }

[profile.test]

[[bench]]
name = "benchmark"
harness = false
